@@ -44,6 +44,13 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>pl.tablicaogloszen.klient.AplikacjaKlienta</mainClass>
+                    <options>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>java.base/java.lang=ALL-UNNAMED</option>
+                        <option>--add-opens</option>
+                        <option>java.base/java.util=ALL-UNNAMED</option>
+                    </options>
                 </configuration>
             </plugin>
         </plugins>
